src/app/globals.css
:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

.section{
  height: 100vh;
  margin-top: 64px;
  color: #00ff00; /* Matrix-like green color */
  font-family: 'Courier New', Courier, monospace; /* Monospace font for a techy look */
  /* text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 15px #00ff00; Glowing effect */
}

.title{
  margin-bottom: 32px;
  color: #05ff00;
}

.tableOfContents{
  margin-top: 64px;
  margin-bottom: 64px;
}

.tableOfContentsLinks{
  color: rgb(55, 220, 63);
  text-decoration: underline;
}
html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

